# counterparty-core

./: .bandit  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  apiary.apib  bandit.yml  checktx.db  circle.yml  codecov.yml  compose.yml  consensus_error.txt  counterparty-cli.py  counterparty-client.py  counterparty-server.py  counterparty.py  counterpartyd.py  cpnewscenarios.sh  docker-compose.yml  dredd.yml  log.txt  mainnet_burns.csv  openapi.json  pip-requirements.txt  profile.txt  protocol_changes.json  pylintrc  pyproject.toml  (+11 more)
counterparty-client/: Cargo.toml  README.md  config.toml  deny.toml
counterparty-client/.cargo/: audit.toml  config.toml
counterparty-client/src/: config.rs  helpers.rs  keys.rs  lib.rs  main.rs  signer.rs  wallet.rs
counterparty-client/src/bitcoinsigner/: common.rs  mod.rs  p2pkh.rs  p2sh.rs  p2trkps.rs  p2trsps.rs  p2wpkh.rs  p2wsh.rs  psbt.rs  tests.rs  transaction.rs  types.rs  utils.rs
counterparty-client/src/commands/: api.rs  mod.rs  wallet.rs
counterparty-client/src/commands/api/: commands.rs  endpoints.rs  execution.rs  mod.rs  models.rs
counterparty-client/src/commands/wallet/: args.rs  broadcast.rs  command_tree.rs  commands.rs  handlers.rs  mod.rs  quantity.rs  quantity_regtest_tests.rs  transaction.rs  utils.rs
counterparty-client/src/counterparty/: address.rs  arc4.rs  decode.rs  extract.rs  mod.rs
counterparty-client/src/signer/: address.rs  mod.rs  psbt.rs  signature.rs  taproot.rs  transaction.rs  types.rs  utils.rs  verification.rs
counterparty-client/src/wallet/: agent.rs  key_service.rs  keys.rs  mod.rs  operations.rs  password.rs  storage.rs  types.rs  utils.rs
counterparty-client/tests/: e2e_regtest.rs
counterparty-core/: .counterparty-node-uuid  .coveragerc  conftest.py  counter_cache.txt  counterparty-core.apib  pyproject.toml  requirements.txt
counterparty-core/counterpartycore/: cli.py  protocol_changes.json  server.py
counterparty-core/counterpartycore/lib/: __init__.py  address.py  api.py  bc_data_stream.py  blocks.py  bootstrap.py  check.py  composer.py  config.py  database.py  deserialize.py  exceptions.py  fetcher.py  follow.py  gas.py  gettxinfo.py  ledger.py  log.py  mempool.py  message_type.py  opcodes.py  p2sh.py  prefetcher.py  public_keys.py  script.py  sentry.py  setup.py  transaction.py  util.py  util_windows.py
counterparty-core/counterpartycore/lib/api/: api_server.py  api_v1.py  api_watcher.py  apiserver.py  apiv1.py  apiwatcher.py  blockcache.py  caches.py  compose.py  composer.py  dbbuilder.py  healthz.py  healthz_server.py  queries.py  routes.py  util.py  verbose.py  wsgi.py
counterparty-core/counterpartycore/lib/backend/: __init__.py  addrindexrs.py  bitcoind.py  electr.py  electrs.py  fetcher.py  indexd.py  rsfetcher.py
counterparty-core/counterpartycore/lib/cli/: __init__.py  bootstrap.py  initialise.py  log.py  main.py  publickeys.py  server.py  setup.py
counterparty-core/counterpartycore/lib/kickstart/: __init__.py  bc_data_stream.py  blocks_parser.py  utils.py
counterparty-core/counterpartycore/lib/ledger/: __init__.py  backendheight.py  balances.py  blocks.py  caches.py  currentstate.py  events.py  issuances.py  ledger.py  markets.py  other.py  supplies.py
counterparty-core/counterpartycore/lib/messages/: __init__.py  attach.py  bet.py  broadcast.py  btcpay.py  burn.py  cancel.py  destroy.py  detach.py  (+17 more)
counterparty-core/counterpartycore/pytest/: conftest.py  fixtures_test.py
counterparty-core/counterpartycore/regtest/: dreddhooks.py  genapidoc.py  property_test.py  regtestnode.py  scenarios_test.py
counterparty-core/counterpartycore/test/: api_db_test.py  api_v2_test.py  arc4_test.py  book_test.py  bytespersigop_test.py  compare_hashes_test.py  complex_unit_test.py  config_context_test.py  conftest.py  database_version_test.py  deserialize_test.py  estimate_fee_per_kb_test.py  gas_test.py  indexer_test.py  integration_test.py  mainnet_test.py  mocked_utxoset_test.py  p2sh_encoding_test.py  parse_block_test.py  pycoin_rs_test.py  rpc_test.py  rust_lib_test.py  sigops_test.py  telemetry_test.py  thread_safe_ttl_cache.py  unit_test.py  util_test.py  utxolocks_test.py  verify_signature_test.py
counterparty-core/tools/: apicache.json  benchmark.py  checklicences.py  comparebalances.py  compareledger.py  copyscenarios.py  dumprps.py  finddivergence.py  genapidoc.py  gennewcheckpoints.py  measure_db_size.py  rebuild.sh  updatetxids.py  xcpcli.py  zmqclient.py
counterparty-core/tools/apidoc/: apicache.json  blueprint-template.md  group-compose.md
counterparty-lib/: ChangeLog.md  pyproject.toml  requirements.txt
counterparty-lib/counterpartylib/: cli.py  protocol_changes.json  server.py
counterparty-lib/counterpartylib/lib/: address.py  api.py  arc4.py  blocks.py  check.py  config.py  database.py  exceptions.py  gettxinfo.py  ledger.py  log.py  message_type.py  opcodes.py  prefetcher.py  restapi.py  script.py  setup.py  transaction.py  util.py  util_windows.py
counterparty-lib/counterpartylib/test/: api_v2_test.py  arc4_test.py  book_test.py  bytespersigop_test.py  complex_unit_test.py  config_context_test.py  conftest.py  database_version_test.py  deserialize_test.py  estimate_fee_per_kb_test.py  integration_test.py  mocked_utxoset_test.py  p2sh_encoding_test.py  parse_block_test.py  pycoin_rs_test.py  thread_safe_ttl_cache.py  transaction_lock.py  unit_test.py  util_test.py  utxolocks_test.py
counterparty-lib/tools/: benchmark.py  checklicences.py  compareledger.py  copyscenarios.py  updatetxids.py  upgradesqlitepagesize.py
counterparty-rs/: Cargo.toml  README.md  build.rs  pyproject.toml  rustfmt.toml
counterparty-rs/src/: b58.rs  lib.rs  utils.rs
counterparty-rs/src/indexer/: batch_rpc.rs  bitcoin_client.rs  block.rs  config.rs  constants.rs  database.rs  logging.rs  mod.rs  rpc_client.rs  stopper.rs  test_utils.rs  utils.rs
counterparty-rs/tests/: test_b58.py  test_utils.py
(+1130 files in other folders)
