[build-system]
requires = ["hatchling==1.14.0"]
build-backend = "hatchling.build"

[project]
name = "counterparty-lib"
requires-python = ">= 3.11"
dynamic = ["version"]
description = "Counterparty Protocol Reference Implementation"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Counterparty Developers", email = "dev@counterparty.io" },
]
keywords = ['counterparty', 'bitcoin', 'blockchain', 'crypto', 'cryptocurrency', 'wallet', 'exchange', 'trading', 'finance']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    'apsw==3.44.2.0',
    'appdirs==1.4.4',
    'setuptools-markdown==0.4.1', # TODO: remove this dependency
    'python-dateutil==2.8.2',
    'Flask-HTTPAuth==4.8.0',
    'Flask==3.0.0',
    'colorlog==6.8.0',
    'json-rpc==1.15.0',
    'pycoin==0.92.20230326',
    'pycryptodome==3.20.0',
    'safe-pysha3==1.0.4',
    'pytest==7.4.4',
    'pytest-cov==4.1.0',
    'python-bitcoinlib==0.12.2',
    'requests==2.31.0',
    'tendo==0.3.0',
    'xmltodict==0.13.0',
    'cachetools==5.3.2',
    'bitstring==4.1.4',
    'Werkzeug==3.0.1',
    'itsdangerous==2.1.2',
]

[project.urls]
"Latest release" = "https://github.com/CounterpartyXCP/counterparty-lib/releases/latest"
"Documentation" = "https://docs.counterparty.io/"
"Source code" = "https://github.com/CounterpartyXCP/"
"Home Page" = "https://counterparty.io/"

[tool.hatch.version]
path = "counterpartylib/lib/config.py"
