[package]
name = "counterparty-client"
version = "11.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6", features = ["derive", "cargo"] }
# rustls (not native-tls/OpenSSL): no system OpenSSL dependency across
# macOS/Linux/Windows, and drops the OpenSSL RUSTSEC advisory. reqwest 0.13
# renamed the `rustls-tls` feature to `rustls`.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "form",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
hex = "0.4.3"
bitcoin = "0.32.5"
bip39 = { version = "2.2", features = ["zeroize"] }
cocoon = "0.4"
thiserror = "2.0"
lazy_static = "1.5"
# serde_yaml is deprecated/unmaintained; serde_yaml_ng is the maintained fork
# with a compatible API.
serde_yaml_ng = "0.10"
# Only the local JSON->YAML syntax highlighting in helpers.rs is used, so drop
# syntect's default features. This removes the `plist-load`/`yaml-load` features
# and their transitive `plist` -> `quick-xml` and `yaml-rust` deps (all flagged
# by cargo-audit), and swaps the C `onig` regex engine for pure-Rust fancy-regex.
syntect = { version = "5.3", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }
termcolor = "1.4"
dirs = "6.0"
toml = "1.0"
rand = "0.10"
rpassword = "7.5"
# keyring 4's default `v1` feature ships the v1-compatible API plus native
# backends (apple-keychain, windows, zbus secret-service).
keyring = "4"
once_cell = "1.21"
secrecy = "0.10"
indicatif = "0.18"
clap_complete = "4.6"
zeroize = { version = "1.9", features = ["derive"] }
rust_decimal = "1.42"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "xcp"
path = "src/main.rs"

[[bin]]
name = "counterparty-client"
path = "src/main.rs"