[build-system]
requires = ["hatchling==1.14.0", "hatch-requirements-txt==0.4.0"]
build-backend = "hatchling.build"

[project]
name = "counterparty-core"
requires-python = ">= 3.10"
dynamic = ["version", "dependencies"]
description = "Counterparty Protocol Command-Line Interface"
readme = "../README.md"
license = "MIT"
authors = [
  { name = "Counterparty Developers", email = "dev@counterparty.io" },
]
keywords = ['counterparty', 'bitcoin', 'blockchain', 'crypto', 'cryptocurrency', 'wallet', 'exchange', 'trading', 'finance']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.envs.default]
pre-install-commands = [
  "pip install -e ../counterparty-rs",
  "pip install -e ../counterparty-lib",
]

[project.scripts]
counterparty-server = "counterpartycore:server.main"

[project.urls]
"Latest release" = "https://github.com/CounterpartyXCP/counterparty-core/releases/latest"
"Documentation" = "https://docs.counterparty.io/"
"Source code" = "https://github.com/CounterpartyXCP/"
"Home Page" = "https://counterparty.io/"

[tool.hatch.version]
path = "../counterparty-lib/counterpartylib/lib/config.py"
