[build-system]
requires = ["hatchling==1.14.0", "hatch-requirements-txt==0.4.0"]
build-backend = "hatchling.build"

[project]
name = "counterparty-core"
requires-python = ">= 3.10, != 3.12"
dynamic = ["version", "dependencies"]
description = "Counterparty Protocol Reference Implementation"
readme = "../README.md"
license = "MIT"
authors = [
  { name = "Counterparty Developers", email = "dev@counterparty.io" },
]
keywords = ['counterparty', 'bitcoin', 'blockchain', 'crypto', 'cryptocurrency', 'wallet', 'exchange', 'trading', 'finance']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Latest release" = "https://github.com/CounterpartyXCP/counterparty-core/releases/latest"
"Documentation" = "https://docs.counterparty.io/"
"Source code" = "https://github.com/CounterpartyXCP/"
"Home Page" = "https://counterparty.io/"

[tool.hatch.version]
path = "counterpartycore/lib/config.py"

[tool.hatch.build.targets.wheel]
include = ["counterpartycore"]

[tool.hatch.envs.default]
pre-install-commands = [
  "pip install -e ../counterparty-rs",
]

[project.scripts]
counterparty-server = "counterpartycore:cli.main.main"

[tool.license_scanner]
allowed-licences = [
    'Apache license',
    'Apache license 2.0',
    'BSD 2-clause license',
    'BSD 3-clause license',
    'BSD license',
    'GNU general public license v2 (gplv2)',
    'GNU lesser general public license',
    'GNU lesser general public license v2 (lgplv2)',
    'GNU lesser general public license v3 (lgplv3)',
    'ISC license (iscl)', 'MIT license',
    'Mozilla public license 2.0 (mpl 2.0)',
    'Python software foundation license',
    'The Unlicense (Unlicense)',
    'Public domain',
    'Creative Commons Zero, CC-0',
]
allowed-packages = [
    'counterparty-core', 'counterparty-rs',
    'maturin', 'apsw', 
]
