[package]
name = "counterparty-rs"
version = "10.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "counterparty_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py37"] }
bs58 = { version = "0.5.0", features = ["check"] }
# secp256k1 = "0.25.0"
bip32 = { version = "0.5.1", features = ["secp256k1-ffi"] }
ripemd = "0.1.3"
sha256 = "1.5.0"
bitcoin = "0.29.2"
par-map = "0.1.4"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc"] }
pyo3-build-config = "0.20.3"
