[package]
name = "counterparty-rs"
version = "10.9.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "counterparty_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py37"] }
bs58 = { version = "0.5.0", features = ["check"] }
# secp256k1 = "0.25.0"
bip32 = { version = "0.5.1", features = ["secp256k1-ffi"] }
ripemd = "0.1.3"
sha256 = "1.5.0"
bitcoin = "0.32.4"
par-map = "0.1.4"
tracing = "0.1.40"
crossbeam-channel = "0.5.13"
bitcoincore-rpc = "0.19.0"
thiserror = "1.0.58"
derive_more = "0.99.17"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "chrono",
  "json",
] }
rocksdb = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
colored = "2.1.0"
rust-crypto = "0.2.36"
time = "0.3.37"
hex = "0.4"

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
] }
pyo3-build-config = "0.20.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
